# open-lto-manager

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  dev.env.check.sh  dev.tasks.check.sh
assets/: main.css
src/: main.rs  route.rs
src/backend/: env.rs  init.rs  logging.rs  mod.rs
src/backend/api/: api_init.rs  api_manufacturer.rs  api_tape.rs  api_tape_type.rs  mod.rs
src/backend/database/: db.rs  mod.rs
src/backend/database/models/: mod.rs  model_file.rs  model_tape.rs  model_tape_type.rs  model_user.rs  model_version.rs
src/backend/database/tables/: mod.rs  table.rs  table_file.rs  table_manufacturer.rs  table_tape.rs  table_tape_type.rs  table_user.rs  table_version.rs
src/frontend/: mod.rs
src/frontend/components/: navbar.rs
src/frontend/elements/: button.rs
src/frontend/pages/: home.rs  mod.rs  show.rs  tape.rs  test.rs
src/frontend/pages/dbg/: db_man.rs  db_tape.rs  db_type.rs  mod.rs
src/shared/models/: app_state.rs
src/shared/models/database/: mod.rs  model_file.rs  model_job.rs  model_manufacturer.rs  model_role.rs  model_tape.rs  model_tape_type.rs
