[package]
name = "openltomanager"
version = "0.1.0"
authors = ["nathros"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]

# https://dioxuslabs.com/learn/0.5/cookbook/optimizing/#build-configuration
[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false